# TDA-datasets

./: README.md
bdgen/uniform/: genUniformSamples.sh  uniform-100-0.barcodes  uniform-100-1.barcodes  uniform-100-10.barcodes  uniform-100-11.barcodes  uniform-100-12.barcodes  uniform-100-13.barcodes  uniform-100-14.barcodes  uniform-100-15.barcodes  uniform-100-16.barcodes  uniform-100-17.barcodes  uniform-100-18.barcodes  uniform-100-19.barcodes  uniform-100-2.barcodes  uniform-100-20.barcodes  uniform-100-21.barcodes  uniform-100-22.barcodes  uniform-100-23.barcodes  uniform-100-24.barcodes  uniform-100-25.barcodes  uniform-100-26.barcodes  uniform-100-27.barcodes  uniform-100-28.barcodes  uniform-100-29.barcodes  uniform-100-3.barcodes  uniform-100-30.barcodes  uniform-100-4.barcodes  uniform-100-5.barcodes  (+3073 more)
tadasets/: pyproject.toml
tadasets/tadasets/: main.py  torus-100-0.csv  torus-1000-0.csv  torus-1100-0.csv  torus-1200-0.csv  torus-1300-0.csv  torus-1400-0.csv  torus-1500-0.csv  torus-1600-0.csv  torus-1700-0.csv  torus-1800-0.csv  torus-1900-0.csv  torus-200-0.csv  torus-2000-0.csv  torus-2100-0.csv  torus-2200-0.csv  torus-2300-0.csv  torus-2400-0.csv  torus-2500-0.csv  torus-2600-0.csv  torus-2700-0.csv  torus-2800-0.csv  torus-2900-0.csv  torus-300-0.csv  torus-3000-0.csv  torus-3100-0.csv  torus-3200-0.csv  torus-3300-0.csv  torus-3400-0.csv  torus-3500-0.csv  torus-3600-0.csv  torus-3700-0.csv  torus-3800-0.csv  torus-3900-0.csv  torus-400-0.csv  torus-4000-0.csv  torus-4100-0.csv  torus-4200-0.csv  torus-4300-0.csv  torus-4400-0.csv  (+11 more)
(+6560 files in other folders)
